--- a/extensions/text-replacer-extension/src/popup/popup.css
+++ b/extensions/text-replacer-extension/src/popup/popup.css
@@ -124,3 +124,10 @@ th {
 .saved-set-row:hover {
     background-color: #f5f5f5;
 }
+
+.help-text {
+  font-size: 11px;
+  color: #666;
+  margin-top: 3px;
+  font-style: italic;
+}
